--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>                                                               
-          <p>이것은 모달입니다s.</p>
+          <p>이것은 모달입니다s.zz</p>
         </div>
       </div>
 </body>
