--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title></title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body oncontextmenu='return false' onselectstart='return false' id="colorCont">
     <main class="desktop">
         <ul>
             <li class="trash">
-                <img src="./images/trash.png" alt="the trash" onclick="colorChange()">
+                <img src="public/images/trash.png" alt="the trash" onclick="colorChange()">
                 휴지통
             </li>
             <li class="folder" id="myBtn">
-                <img src="./images/folder.png" alt="it is a folder">
+                <img src="public/images/folder.png" alt="it is a folder">
                 우주
             </li>
             <li class="folder" id="tvshow">
-                <img src="./images/folder.png" alt="it is a folder">
+                <img src="public/images/folder.png" alt="it is a folder">
                 TVSHOW
             </li>
         </ul>
@@ -30,7 +30,7 @@
     <footer class="toolbar">
         <ul> 
             <li class="start">
-                <img src="./images/starto.png" alt="image in start button">
+                <img src="public/images/starto.png" alt="image in start button">
                 시작</li>
             <li class="time" id="clock">오전 11:20</li>
         </ul>
