--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li class="folder" id="tvshow">
                 <img src="public/images/folder.png" alt="it is a folder">
-                TVSHOW
+                봇가이드
             </li>
         </ul>
     </main>
@@ -48,12 +48,12 @@
 <script language="javascript">
     $(function(){
         $('.trash').click(function(){
-            var url = "bomb.html";
+            var url = "public/bomb.html";
             $(location).attr('href',url);
         });
 
         $('#tvshow').click(function(){
-            var url = "kakao.html";
+            var url = "public/kakao.html";
             $(location).attr('href',url);
         });
     });
