--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li class="folder" id="guide">
                 <img src="public/images/folder.png" alt="it is a folder">
-                봇가이드
+                봇도움말
             </li>
         </ul>
     </main>
@@ -39,7 +39,11 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>                                                               
-          <p>이것은 모달입니다s.zz</p>
+          <p>도움말 폴더</p>
+          <p>[농사 도움말]</p>
+          <p>[낚시 도움말]</p>
+          <p>[도시 도움말]</p>
+          <p>[급료 도움말]</p>
         </div>
       </div>
 </body>
