--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </li>
             <li class="folder" id="myBtn">
                 <img src="public/images/folder.png" alt="it is a folder">
-                우주
+                봇도움말
             </li>
             <li class="folder" id="guide">
                 <img src="public/images/folder.png" alt="it is a folder">
-                봇도움말
+                이모티콘샵 (준비중)
             </li>
         </ul>
     </main>
