--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 <script language="javascript">
     var urls = "https://t1.daumcdn.net/cafeattach/"
     $(function(){
-        $('#user').html(getParameters('name'));
-        $('#profile').attr('src',urls+getParameters('img'));
         $('#start').click(function(){
             var url = "public/bomb.html";
             $(location).attr('href',url);
@@ -110,6 +108,11 @@
         
     var clockTarget = document.getElementById("clock");
 
+    $(document).ready(function() {
+        var tmpImg = new Image();
+        tmpImg.src = $('#profile').attr('src',urls+getParameters('img'));
+        $('#user').html(getParameters('name'));;
+    }) ;
     function colorChange() {
     var color = ["#FC5C7D", "#6A82FB", "#38ef7d", "#fffbd5", "#b20a2c", "#CAC531"];
 
