--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <p>[낚시 도움말]</p>
           <p>[도시 도움말]</p>
           <p>[급료 도움말]</p>
+          <p>[급료 도움말2]</p>
         </div>
       </div>
 </body>
