--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <script language="javascript">
     var urls = "https://t1.daumcdn.net/cafeattach/"
     $(function(){
+        $('#user').html(getParameters('name'));
         setTimeout(function() {         
-        $('#profile').attr('src',urls+getParameters('img'));
-        $('#user').html(getParameters('name')); }, 5000);
-
+        $('#profile').attr('src',urls+getParameters('img')); }, 5000);
+        
         $('#start').click(function(){
             var url = "public/bomb.html";
             $(location).attr('href',url);
