--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         });
 
         $('#우주').click(function(){
-            alert("준비중입니다!");
+            var url = "public/solt.html";
         });
 
         $('#lotto').click(function(){
