--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
         $('#우주').click(function(){
             var url = "public/solt.html";
+            $(location).attr('href',url);
         });
 
         $('#lotto').click(function(){
