--- a/public/tooltip.html
+++ b/public/tooltip.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
     <title></title>
-    <link href="styles/tool.css" rel="stylesheet" />
+    <link href="styles/tool.scss" rel="stylesheet" />
   </head>
   <body>
 <div class="container">
