--- a/public/solt.html
+++ b/public/solt.html
@@ -18,8 +18,8 @@
         한번 돌릴때마다<br/> 코인이 1개 소모됩니다. 💰<br/>코인에 당첨되려면 2줄 이상 당첨되세요!<br/></div>
   
       <div class="prize-table">
-        <div class="doubles">
-        </div>
+        <div class="doubles">`
+        </div>windows
         <div class="triples">
   
         </div>
