--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <img src="public/images/folder.png" alt="it is a folder">
                 툴팁
             </li>
-            <!-- <li class="folder" id="user_folder" style="cursor: pointer;">
+            <li class="folder" id="user_folder" style="cursor: pointer;">
                 <img id="profile" src="" alt="이미지가 보이지 않을 경우 꾹 누른 후 열기 후 닫기">
                 <span id="user"></span>
-            </li> -->
+            </li>
         </ul>     
     </main>
     <footer class="toolbar">
