--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
 <script  src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script language="javascript">
-    var urls = "https://t1.daumcdn.net/cafeattach/"
+    var urls = "http://t1.daumcdn.net/cafeattach/"
     $(function(){
         $('#user').html(getParameters('name'));
         $('#profile').attr('src',urls+getParameters('img'));
