--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <main class="desktop">
         <ul>
             <li class="trash" style="cursor: pointer;">
-                <img src="public/images/trash.png" alt="the trash" onclick="colorChange()">
+                <img src="public/images/ntrash.png" alt="the ntrash" onclick="colorChange()">
                 휴지통
             </li>
             <li class="folder" id="myBtn" style="cursor: pointer;">
-                <img src="public/images/folder.png" alt="it is a folder">
+                <img src="public/images/nfolder.png" alt="it is a nfolder">
                 봇도움말
             </li>
             <li class="game" id="game" style="cursor: pointer;">
-                <img src="public/images/folder.png" alt="it is a folder">
+                <img src="public/images/nfolder.png" alt="it is a nfolder">
                 슬롯<br/>게임
             </li>
             <li class="lotto" id="lotto" style="cursor: pointer;">
@@ -30,7 +30,7 @@
                 VIP<br/>복권
             </li>
             <li class="tooltip" id="tooltip" style="cursor: pointer;">
-                <img src="public/images/folder.png" alt="it is a folder">
+                <img src="public/images/nfolder.png" alt="it is a nfolder">
                 툴팁
             </li>
             <li class="folder" id="user_folder" style="cursor: pointer;">
