--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
                 <img src="public/images/nfolder.png" alt="it is a nfolder">
                 봇도움말
             </li>
-            <li class="game" id="game" style="cursor: pointer;">
-                <img src="public/images/nfolder.png" alt="it is a nfolder">
-                슬롯<br/>게임
-            </li>
-            <li class="lotto" id="lotto" style="cursor: pointer;">
-                <img src="public/images/lotto.png" alt="it is a folder">
-                VIP<br/>복권
-            </li>
             <li class="tooltip" id="tooltip" style="cursor: pointer;">
                 <img src="public/images/nfolder.png" alt="it is a nfolder">
                 툴팁
@@ -52,12 +44,15 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>                                                               
-          <p>도움말 폴더</p>
-          <p>[농사 도움말]</p>
-          <p>[낚시 도움말]</p>
-          <p>[도시 도움말]</p>
-          <p>[급료 도움말]</p>
-          <p>[급료 도움말]</p>
+          <p>게임 폴더</p>
+        <li class="game" id="game" style="cursor: pointer;">
+            <img src="public/images/nslot.png" alt="it is a nfolder">
+            슬롯<br/>게임
+        </li>
+        <li class="lotto" id="lotto" style="cursor: pointer;">
+            <img src="public/images/lotto.png" alt="it is a folder">
+            로또<br/>복권
+        </li>
         </div>
       </div>
 </body>
