--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 <body oncontextmenu='return false' onselectstart='return false' id="colorCont">
     <main class="desktop">
+        <!-- Modal HTML embedded directly into document -->
+<div id="ex1" class="modal">
+    <p>Thanks for clicking. That felt good.</p>
+    <a href="#" rel="modal:close">Close</a>
+  </div>
+  
+  <!-- Link to open the modal -->
+  <p><a href="#ex1" rel="modal:open">Open Modal</a></p>
         <ul>
             <li class="trash" style="cursor: pointer;">
                 <img src="public/images/ntrash.png" alt="the ntrash" onclick="colorChange()">
@@ -36,7 +44,7 @@
                 툴팁
             </li>
             <li class="folder" id="user_folder" style="cursor: pointer;">
-                <img id="profile" src="" alt="이미지가 보이지 않을 경우 꾹 누른 후 열기 후 닫기">
+                <img id="profile" src="" alt="Error">
                 <span id="user"></span>
             </li>
         </ul>
@@ -64,6 +72,12 @@
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
+<!-- Remember to include jQuery :) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+<!-- jQuery Modal -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script language="javascript">
     var urls = "http://t1.daumcdn.net/cafeattach/"
@@ -220,6 +234,9 @@
         color: black;
         text-decoration: none;
         cursor: pointer;
+    }
+    .desktop{
+        display: ;
     }
 </style>
 
