--- a/public/tooltip.html
+++ b/public/tooltip.html
@@ -7,18 +7,12 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.8/pixi.min.js"></script>
 <script>
-const xhr = new XMLHttpRequest();
-const url = 'https://mangohyu.github.io/mbtibot/public/images/';
-
-xhr.open('GET', url);
-xhr.onreadystatechange = someHandler;
-xhr.send();
-
+var url = "https://raw.githubusercontent.com/mangohyu/mbtibot/master"
  const app = new PIXI.Application({ backgroundColor: 0x1099bb });
 document.body.appendChild(app.view);
 
 // create a texture from an image path
-const texture = PIXI.Texture.from('public/images/dd.svg');
+const texture = PIXI.Texture.from(url+'/public/images/nfolder.png');
 
 // Scale mode for pixelation
 texture.baseTexture.scaleMode = PIXI.SCALE_MODES.NEAREST;
@@ -44,7 +38,7 @@ function createBunny(x, y) {
     bunny.anchor.set(0.5);
 
     // make it a bit bigger, so it's easier to grab
-    bunny.scale.set(1);
+    bunny.scale.set(0.1);
 
     // setup events for mouse + touch using
     // the pointer events
