--- a/public/tooltip.html
+++ b/public/tooltip.html
@@ -16,6 +16,11 @@ const texture = PIXI.Texture.from(url+'/public/images/nfolder.png');
 
 // Scale mode for pixelation
 texture.baseTexture.scaleMode = PIXI.SCALE_MODES.NEAREST;
+app.renderer.resize(window.innerWidth, window.innerHeight);
+window.onresize = function()
+{
+    app.renderer.resize(window.innerWidth, window.innerHeight);
+}
 
 for (let i = 0; i < 10; i++) {
     createBunny(
@@ -92,3 +97,6 @@ function onDragMove() {
     }
 }
 </script>
+<style>
+
+</style>
