--- a/public/tooltip.html
+++ b/public/tooltip.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-
 </body>
 
 </html>
@@ -98,5 +97,7 @@ function onDragMove() {
 }
 </script>
 <style>
-
+body{
+ background-color: #1099BB;
+}
 </style>
