--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body oncontextmenu='return false' onselectstart='return false' id="colorCont">
     <main class="desktop">
+    <div class="desktop_item">
         <ul>
             <li class="trash" style="cursor: pointer;">
                 <img src="public/images/ntrash.png" alt="the ntrash" onclick="colorChange()">
@@ -21,7 +22,7 @@
             </li>
             <li class="folder" id="myBtn" style="cursor: pointer;">
                 <img src="public/images/nfolder.png" alt="it is a nfolder">
-                봇도움말
+                도움말
             </li>
             <li class="game" id="game" style="cursor: pointer;">
                 <img src="public/images/nslot.png" alt="it is a nfolder">
@@ -40,6 +41,33 @@
                 <span id="user"></span>
             </li>
         </ul>
+        <ul>
+            <li class="trash" style="cursor: pointer;">
+                <img src="public/images/ntrash.png" alt="the ntrash" onclick="colorChange()">
+                휴지통
+            </li>
+            <li class="folder" id="myBtn" style="cursor: pointer;">
+                <img src="public/images/nfolder.png" alt="it is a nfolder">
+                도움말
+            </li>
+            <li class="game" id="game" style="cursor: pointer;">
+                <img src="public/images/nslot.png" alt="it is a nfolder">
+                슬롯<br />게임
+            </li>
+            <li class="lotto" id="lotto" style="cursor: pointer;">
+                <img src="public/images/lotto.png" alt="it is a folder">
+                로또<br />복권
+            </li>
+            <li class="tooltip" id="tooltip" style="cursor: pointer;">
+                <img src="public/images/nfolder.png" alt="it is a nfolder">
+                툴팁
+            </li>
+            <li class="folder" id="user_folder" style="cursor: pointer;">
+                <img id="profile" src="" alt="Error">
+                <span id="user"></span>
+            </li>
+        </ul>
+    </div>
     </main>
     <footer class="toolbar">
         <ul>
@@ -63,7 +91,7 @@
         </div>
     </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.8/pixi.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script language="javascript">
     var urls = "http://t1.daumcdn.net/cafeattach/"
