--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 툴팁
             </li>
             <li class="folder" id="user_folder" style="cursor: pointer;">
-                <img id="profile" src="" alt="Error">
+                <img id="profile" src="" alt="Error" onerror="this.src='public/images/warning.png';">
                 <span id="user"></span>
             </li>
         </ul>
         <ul>
             <li class="trash" style="cursor: pointer;">
-                <img src="public/images/ntrash.png" alt="the ntrash" onclick="colorChange()">
-                휴지통
+                <img src="public/images/ntrash.png" alt="the ntrash" >
+                테스트
             </li>
             <li class="folder" id="myBtn" style="cursor: pointer;">
                 <img src="public/images/nfolder.png" alt="it is a nfolder">
@@ -62,11 +62,10 @@
                 <img src="public/images/nfolder.png" alt="it is a nfolder">
                 툴팁
             </li>
-            <li class="folder" id="user_folder" style="cursor: pointer;">
-                <img id="profile" src="" alt="Error">
-                <span id="user"></span>
-            </li>
         </ul>
+        <a href="javascript:;" id="kakao-link-btn">
+            <img src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_small.png" width="10px" />
+            </a>
     </div>
     </main>
     <footer class="toolbar">
@@ -93,12 +92,13 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.8/pixi.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 <script language="javascript">
     var urls = "http://t1.daumcdn.net/cafeattach/"
     $(function () {
-        $('#user').html(getParameters('name').split(' ')[0]);
+        $('#user').html(getParameters('name').split(' ')[0]+"님의 정보");
         $('#profile').attr('src', urls + getParameters('img'));
-
+        
         $('#start').click(function () {
             var url = "public/bomb.html";
             $(location).attr('href', url);
@@ -201,6 +201,41 @@
     }
     init();
 </script>
+<script type="text/javascript">
+    //<![CDATA[
+      // // 사용할 앱의 JavaScript 키를 설정해 주세요.
+      Kakao.init('d14d05b002e5347265b1112294701777');
+      // // 카카오링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
+      Kakao.Link.createDefaultButton({
+        container: '#kakao-link-btn',
+        objectType: 'feed',
+        content: {
+          title: document.title,
+          description: '내용, 주로 해시태그',
+          imageUrl: document.images[0].src,
+          link: {
+            webUrl: document.location.href,
+            mobileWebUrl: document.location.href
+          }
+        },
+        social: {
+          likeCount: 286,
+          commentCount: 45,
+          sharedCount: 845
+        },
+        buttons: [
+          {
+            title: 'Open!',
+            link: {
+              mobileWebUrl: document.location.href,
+              webUrl: document.location.href
+            }
+          }  
+        ]
+      });
+    //]]>
+  </script> 
+
 <style>
     /* The Modal (background) */
     .modal {
