--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
         </ul>
         <ul>
             <li class="trash" style="cursor: pointer;">
-                <img src="public/images/ntrash.png" alt="the ntrash" >
-                테스트
+                <img src="public/images/boiling.png" alt="the ntrash" >
+                요리
             </li>
             <li class="folder" id="myBtn" style="cursor: pointer;">
-                <img src="public/images/nfolder.png" alt="it is a nfolder">
-                도움말
+                <img src="public/images/barrier.png" alt="it is a nfolder">
+                공사중
             </li>
             <li class="game" id="game" style="cursor: pointer;">
-                <img src="public/images/nslot.png" alt="it is a nfolder">
-                슬롯<br />게임
+                <img src="public/images/barrier.png" alt="it is a nfolder">
+                공사중
             </li>
             <li class="lotto" id="lotto" style="cursor: pointer;">
-                <img src="public/images/lotto.png" alt="it is a folder">
-                로또<br />복권
+                <img src="public/images/barrier.png" alt="it is a folder">
+                공사중
             </li>
             <li class="tooltip" id="tooltip" style="cursor: pointer;">
-                <img src="public/images/nfolder.png" alt="it is a nfolder">
-                툴팁
+                <img src="public/images/barrier.png" alt="it is a nfolder">
+                공사중
             </li>
         </ul>
     </div>
