--- a/public/tooltip.html
+++ b/public/tooltip.html
@@ -1,24 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <meta charset="utf-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <title></title>
+    <link rel="stylesheet" href="public/styles/style.css">
+</head>
 <body>
-<!-- <img src="" id="item1" alt="the ntrash" >
+<img src="" id="item1" alt="the ntrash" >
 <img src="" id="item2" alt="the ntrash" >
 <img src="" id="item3" alt="the ntrash" >
 <img src="" id="item4" alt="the ntrash" >
-<img src="" id="item5" alt="the ntrash" > -->
+<img src="" id="item5" alt="the ntrash" >
 </body>
 
-</html>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.8/pixi.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script>
-var urls = "http://t1.daumcdn.net/cafeattach/"
+<script language="javascript"> 
+var urls = "https://t1.daumcdn.net/cafeattach/"
 $(function () {
-    // $('#item1').attr('src', urls + getParameters('item1'));
-    // $('#item2').attr('src', urls + getParameters('item2'));
-    // $('#item3').attr('src', urls + getParameters('item3'));
-    // $('#item4').attr('src', urls + getParameters('item4'));
-    // $('#item5').attr('src', urls + getParameters('item5'));
+    $('#item1').attr('src', urls + getParameters('item1'));
+    $('#item2').attr('src', urls + getParameters('item2'));
+    $('#item3').attr('src', urls + getParameters('item3'));
+    $('#item4').attr('src', urls + getParameters('item4'));
+    $('#item5').attr('src', urls + getParameters('item5'));
 });
 var getParameters = function (paramName) {
     // 리턴값을 위한 변수 선언
@@ -36,6 +46,7 @@ var getParameters = function (paramName) {
         }
     }
 };
+
 var url = "https://raw.githubusercontent.com/mangohyu/mbtibot/master"
  const app = new PIXI.Application({ backgroundColor: 0x1099bb });
 document.body.appendChild(app.view);
@@ -62,10 +73,10 @@ function createBunny(x, y) {
     // create our little bunny friend..
     const bunny = new PIXI.Sprite(texture);
 
-    // enable the bunny to be interactive... this will allow it to respond to mouse and touch events
+    //터치이벤트
     bunny.interactive = true;
 
-    // this button mode will mean the hand cursor appears when you roll over the bunny with your mouse
+    //마우스클릭가능
     bunny.buttonMode = true;
 
     // center the bunny's anchor point
@@ -131,3 +142,5 @@ body{
  background-color: #1099BB;
 }
 </style>
+
+</html>
